# mrdb

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: fsinfo_linux.rs  fsinfo_unix.rs  fsinfo_windows.rs  lib.rs  main.rs  os_unix.rs  os_windows.rs
