[package]
name = "mrdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrdb"
path = "src/main.rs"

[lib]
name = "mrdb"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.2" # may not be needed anymore since we mmap
thiserror = "1.0.50"
bitfield-struct = "0.5.6"
init_array = "0.3.0"
dashmap = "5.5.3"
ahash = "0.8.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2.151"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_System", "Win32_System_Memory", "Win32_Foundation", "Win32_Storage", "Win32_Storage_FileSystem"] }
widestring = "1.0.2"